Enhanced chapter 12 documentation